# zero

./: .env.example  .gitignore  Cargo.toml  README_CLUSTER.md  install.sh
config/: ai.example.toml  cluster.example.toml  datasets.example.toml  node.example.toml  objective.example.toml  walk_forward.example.toml
coordinator/: pyproject.toml
coordinator/app/: __init__.py  aggregator.py  ai_bridge.py  config.py  coordinator.py  db.py  health.py  job_queue.py  main.py  models.py  redis_client.py  scheduler.py  schemas.py  telegram_bot.py
coordinator/migrations/: 001_init.sql
coordinator/tests/: test_placeholder_plumbing_e2e.py  test_placeholder_plumbing_functions.py  test_portfolio_correlation.py  test_schemas.py
ollama/: Modelfile.project01-brain
ollama/memory_seed/: project01_rules.md
ollama/prompts/: cold_test_failure.md  daily_review.md  new_best_strategy.md  stuck_state.md
scripts/: backup_state.sh  install_ollama.sh  install_pi_services.sh  install_rust.sh  install_tailscale.sh  install_worker_services.sh  sync_data.sh  test_connectivity.sh  test_file_transfer.sh  validate_data.sh
src/: lib.rs  main.rs  portfolio.rs
src/ai/: local_brain.rs  mod.rs  openai_budget.rs  prompts.rs  summary.rs
systemd/: project01-coordinator.service  project01-dashboard.service  project01-health.service  project01-telegram.service  project01-worker.service
tests/: test_dataset_ranges.rs  test_engine_mode.rs  test_mffu_fitness.rs  test_portfolio_fitness.rs  test_protocol.rs  test_walk_forward.rs
updates/: .env.example  Cargo.toml  README_CLUSTER.md  install.sh
(+48 files in other folders)
